.gitignore に .DS_Store と /vendor/bundle を追加

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# 以下を追加
+.DS_Store
+/vendor/bundle
+
+# RubyMineを使用されている方は次も追加
+/.idea
